# personal_wallet__test_task

./: .gitignore  README.md  consts.py  interaction_handlers.py  main.py  note_manager.py  pyproject.toml
src/: account.py  interaction_handlers.py  note.py  note_manager.py
