[tool.poetry]
name = "personal-wallet-test-task"
version = "0.1.0"
description = ""
authors = ["Elena Vagner <develop.vagner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
